@@ -3,7 +3,7 @@
 //
 // X specific code for the Fast Light Tool Kit (FLTK).
 //
-// Copyright 1998-2006 by Bill Spitzak and others.
+// Copyright 1998-2007 by Bill Spitzak and others.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Library General Public
@@ -1374,7 +1374,10 @@ void Fl_Window::show() {
   Fl_Tooltip::exit(this);
   if (!shown()) {
     fl_open_display();
-    if (can_boxcheat(box())) fl_background_pixel = int(fl_xpixel(color()));
+    // Don't set background pixel for double-buffered windows...
+    if (type() == FL_WINDOW && can_boxcheat(box())) {
+      fl_background_pixel = int(fl_xpixel(color()));
+    }
     Fl_X::make_xid(this);
   } else {
     XMapRaised(fl_display, i->xid);
