@@ -2,7 +2,8 @@ CHANGES IN FLTK 1.1.8
 
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578)
-	- Avoiding hidden mouse pointer in OS X (STR #1475)
+	- Fl_Double_Window did not always show the scheme
+	  background image.
 	- Fixed first window behavior in OS X (STR #1548)
 	- Fixed calculation of character widths for OS X
 	  Quartz rendering (no STR)
